welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value K
	if (nums(k)==2 && nums(K)==7 && nums(k)==1) {
                               ^